<resources>
    <string name="app_name">Emircan</string>

    <!--exceptions-->
    <string name="exception_service_null_response">Null Response</string>
    <string name="exception_service_generic_error_message">Error!</string>
    <string name="exception_service_fail_response_with_status">Error! Response Code : %1$d</string>
    <string name="exception_title_generic_error">Error</string>
    <string name="exception_title_service_error">Service Error</string>

    <!--common_labels-->
    <string name="label_name">Name</string>
    <string name="label_address">Address</string>
    <string name="label_neighborhood">Neighborhood</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_country">Country</string>
    <string name="label_log_out">Log out</string>

</resources>