<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="venue"
            type="com.pekyurek.emircan.domain.model.response.venues.Venue" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivVenueIcon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:transitionName="@{venue.imageTransitionId}"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    app:title="@{venue.name}">

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@{venue.nameTransitionId}"
                    app:description="@{venue.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/label_name" />

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:transitionName="@{venue.addressTransitionId}"
                    app:description="@{venue.location.address}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVenueName"
                    app:title="@string/label_address" />

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueNeighborhood"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{venue.location.neighborhood}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVenueAddress"
                    app:title="@string/label_neighborhood" />

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{venue.location.city}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVenueNeighborhood"
                    app:title="@string/label_city" />

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{venue.location.state}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVenueCity"
                    app:title="@string/label_state" />

                <com.pekyurek.emircan.presentation.widget.InfoRowView
                    android:id="@+id/tvVenueCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{venue.location.country}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVenueState"
                    app:title="@string/label_country" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>